@startuml
!pragma layout smetana
title 04. Sub-Agent Domain Class Model (Python)

skinparam shadowing false
skinparam classAttributeIconSize 0

package "domain" {
  class AgentTask {
    + task_id: str
    + session_id: str
    + request_id: str
    + status: ProcessStatus
    + result: Optional[AgentExecutionResult]
    + state_version: int
  }

  class ToolPlan {
    + tool_name: str
    + server_name: str
    + arguments: Dict[str, Any]
    + reasoning: str
  }

  class Message {
    + role: str
    + content: str
  }

  class PlanningContext {
    + session_id: str
    + history: List[Message]
    + available_tools: List[Dict[str, Any]]
    + current_plan: Optional[ToolPlan]
    + tool_results: List[Dict[str, Any]]
  }

  class AgentExecutionResult {
    + task_id: str
    + final_answer: str
    + raw_data: Dict[str, Any]
    + usage_metadata: Dict[str, int]
  }

  enum ProcessStatus {
    ACCEPTED
    RUNNING
    COMPLETED
    FAILED
  }
}

AgentTask "1" *-- "0..1" AgentExecutionResult
PlanningContext "1" *-- "*" Message
PlanningContext "1" *-- "0..1" ToolPlan
AgentTask --> ProcessStatus

@enduml
